// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`skeleton skeleton advance demo works fine 1`] = `
<div
  class="t-skeleton-demo"
>
  <section
    class="t-skeleton-demo-card"
  >
    <div
      class="header"
    >
      网页（使用 rowCol）
    </div>
    <div
      class="content"
    >
      <div
        class="t-skeleton"
        row-coll="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],1,1,[object Object],[object Object]"
      >
        
        
        <div
          class="t-skeleton__row"
        >
          
          <div
            class="t-skeleton__col t-skeleton--type-text"
          >
            <!---->
          </div>
          
        </div>
        <div
          class="t-skeleton__row"
        >
          
          <div
            class="t-skeleton__col t-skeleton--type-text"
          >
            <!---->
          </div>
          
        </div>
        <div
          class="t-skeleton__row"
        >
          
          <div
            class="t-skeleton__col t-skeleton--type-text"
          >
            <!---->
          </div>
          
        </div>
        <div
          class="t-skeleton__row"
        >
          
          <div
            class="t-skeleton__col t-skeleton--type-text"
            style="width: 70%;"
          >
            <!---->
          </div>
          
        </div>
        
        
      </div>
    </div>
  </section>
  <section
    class="t-skeleton-demo-card"
  >
    <div
      class="header"
    >
      列表（组合使用）
    </div>
    <div
      class="content"
    >
      <ul
        class="t-skeleton-demo-list"
      >
        
        <li>
          <div
            class="t-skeleton avatar"
          >
            
            
            <div
              class="t-skeleton__row"
            >
              
              <div
                class="t-skeleton__col t-skeleton--type-circle"
                style="width: 56px; height: 56px;"
              >
                <!---->
              </div>
              
            </div>
            
            
          </div>
          <div
            class="t-skeleton paragraph"
          >
            
            
            <div
              class="t-skeleton__row"
            >
              
              <div
                class="t-skeleton__col t-skeleton--type-text"
              >
                <!---->
              </div>
              
            </div>
            <div
              class="t-skeleton__row"
            >
              
              <div
                class="t-skeleton__col t-skeleton--type-text"
              >
                <!---->
              </div>
              
            </div>
            <div
              class="t-skeleton__row"
            >
              
              <div
                class="t-skeleton__col t-skeleton--type-text"
                style="width: 70%;"
              >
                <!---->
              </div>
              
            </div>
            
            
          </div>
        </li>
        <li>
          <div
            class="t-skeleton avatar"
          >
            
            
            <div
              class="t-skeleton__row"
            >
              
              <div
                class="t-skeleton__col t-skeleton--type-circle"
                style="width: 56px; height: 56px;"
              >
                <!---->
              </div>
              
            </div>
            
            
          </div>
          <div
            class="t-skeleton paragraph"
          >
            
            
            <div
              class="t-skeleton__row"
            >
              
              <div
                class="t-skeleton__col t-skeleton--type-text"
              >
                <!---->
              </div>
              
            </div>
            <div
              class="t-skeleton__row"
            >
              
              <div
                class="t-skeleton__col t-skeleton--type-text"
              >
                <!---->
              </div>
              
            </div>
            <div
              class="t-skeleton__row"
            >
              
              <div
                class="t-skeleton__col t-skeleton--type-text"
                style="width: 70%;"
              >
                <!---->
              </div>
              
            </div>
            
            
          </div>
        </li>
        <li>
          <div
            class="t-skeleton avatar"
          >
            
            
            <div
              class="t-skeleton__row"
            >
              
              <div
                class="t-skeleton__col t-skeleton--type-circle"
                style="width: 56px; height: 56px;"
              >
                <!---->
              </div>
              
            </div>
            
            
          </div>
          <div
            class="t-skeleton paragraph"
          >
            
            
            <div
              class="t-skeleton__row"
            >
              
              <div
                class="t-skeleton__col t-skeleton--type-text"
              >
                <!---->
              </div>
              
            </div>
            <div
              class="t-skeleton__row"
            >
              
              <div
                class="t-skeleton__col t-skeleton--type-text"
              >
                <!---->
              </div>
              
            </div>
            <div
              class="t-skeleton__row"
            >
              
              <div
                class="t-skeleton__col t-skeleton--type-text"
                style="width: 70%;"
              >
                <!---->
              </div>
              
            </div>
            
            
          </div>
        </li>
        
      </ul>
    </div>
  </section>
</div>
`;

exports[`skeleton skeleton baseVue demo works fine 1`] = `
<div>
  <div
    class="t-switch t-size-m t-is-checked mb-20"
    disabled="false"
    modelvalue="true"
  >
    <span
      class="t-switch__handle"
    >
      <!---->
    </span>
    <div
      class="t-switch__content t-size-m"
    >
      <!---->
    </div>
  </div>
  <div>
    <div
      class="t-skeleton mb-20"
    >
      
      
      <div
        class="t-skeleton__row"
      >
        
        <div
          class="t-skeleton__col t-skeleton--type-text"
        >
          <!---->
        </div>
        
      </div>
      <div
        class="t-skeleton__row"
      >
        
        <div
          class="t-skeleton__col t-skeleton--type-text"
        >
          <!---->
        </div>
        
      </div>
      <div
        class="t-skeleton__row"
      >
        
        <div
          class="t-skeleton__col t-skeleton--type-text"
        >
          <!---->
        </div>
        
      </div>
      <div
        class="t-skeleton__row"
      >
        
        <div
          class="t-skeleton__col t-skeleton--type-text"
          style="width: 70%;"
        >
          <!---->
        </div>
        
      </div>
      
      
    </div>
  </div>
</div>
`;

exports[`skeleton skeleton containerVue demo works fine 1`] = `
<div
  class="t-row t-row--start t-row--top t-skeleton-demo"
  style="margin-left: 0px; margin-right: 0px;"
>
  
  
  <div
    class="t-col t-col-12"
    style="padding-left: 0px; padding-right: 0px;"
  >
    
    <section
      class="t-skeleton-demo-card"
    >
      <div
        class="header"
      >
        渐变加载动画
      </div>
      <div
        class="content"
      >
        <div
          class="t-skeleton"
        >
          
          
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-gradient"
            >
              <!---->
            </div>
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-gradient"
            >
              <!---->
            </div>
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-gradient"
            >
              <!---->
            </div>
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-gradient"
              style="width: 70%;"
            >
              <!---->
            </div>
            
          </div>
          
          
        </div>
      </div>
    </section>
    
  </div>
  <div
    class="t-col t-col-12"
    style="padding-left: 0px; padding-right: 0px;"
  >
    
    <section
      class="t-skeleton-demo-card"
    >
      <div
        class="header"
      >
        闪烁加载动画
      </div>
      <div
        class="content"
      >
        <div
          class="t-skeleton"
        >
          
          
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-flashed"
            >
              <!---->
            </div>
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-flashed"
            >
              <!---->
            </div>
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-flashed"
            >
              <!---->
            </div>
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-flashed"
              style="width: 70%;"
            >
              <!---->
            </div>
            
          </div>
          
          
        </div>
      </div>
    </section>
    
  </div>
  
  
</div>
`;

exports[`skeleton skeleton themeVue demo works fine 1`] = `
<div
  class="t-row t-row--start t-row--top t-skeleton-demo"
  style="margin-left: 0px; margin-right: 0px;"
>
  
  
  <div
    class="t-col t-col-12"
    style="padding-left: 0px; padding-right: 0px;"
  >
    
    <section
      class="t-skeleton-demo-card"
    >
      <div
        class="header"
      >
        text
      </div>
      <div
        class="content"
      >
        <div
          class="t-skeleton"
        >
          
          
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text"
            >
              <!---->
            </div>
            
          </div>
          
          
        </div>
      </div>
    </section>
    
  </div>
  <div
    class="t-col t-col-12"
    style="padding-left: 0px; padding-right: 0px;"
  >
    
    <section
      class="t-skeleton-demo-card"
    >
      <div
        class="header"
      >
        avatar
      </div>
      <div
        class="content"
      >
        <div
          class="t-skeleton"
        >
          
          
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-circle"
              style="width: 56px; height: 56px;"
            >
              <!---->
            </div>
            
          </div>
          
          
        </div>
      </div>
    </section>
    
  </div>
  <div
    class="t-col t-col-12"
    style="padding-left: 0px; padding-right: 0px;"
  >
    
    <section
      class="t-skeleton-demo-card"
    >
      <div
        class="header"
      >
        paragraph
      </div>
      <div
        class="content"
      >
        <div
          class="t-skeleton"
        >
          
          
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text"
            >
              <!---->
            </div>
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text"
            >
              <!---->
            </div>
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text"
              style="width: 70%;"
            >
              <!---->
            </div>
            
          </div>
          
          
        </div>
      </div>
    </section>
    
  </div>
  <div
    class="t-col t-col-12"
    style="padding-left: 0px; padding-right: 0px;"
  >
    
    <section
      class="t-skeleton-demo-card"
    >
      <div
        class="header"
      >
        avatar-text
      </div>
      <div
        class="content"
      >
        <div
          class="t-skeleton"
        >
          
          
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-circle"
            >
              <!---->
            </div>
            <div
              class="t-skeleton__col t-skeleton--type-text"
              style="height: 32px;"
            >
              <!---->
            </div>
            
          </div>
          
          
        </div>
      </div>
    </section>
    
  </div>
  <div
    class="t-col t-col-12"
    style="padding-left: 0px; padding-right: 0px;"
  >
    
    <section
      class="t-skeleton-demo-card"
    >
      <div
        class="header"
      >
        tab
      </div>
      <div
        class="content"
      >
        <div
          class="t-skeleton"
        >
          
          
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text"
              style="height: 30px;"
            >
              <!---->
            </div>
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text"
              style="height: 200px;"
            >
              <!---->
            </div>
            
          </div>
          
          
        </div>
      </div>
    </section>
    
  </div>
  <div
    class="t-col t-col-12"
    style="padding-left: 0px; padding-right: 0px;"
  >
    
    <section
      class="t-skeleton-demo-card"
    >
      <div
        class="header"
      >
        article
      </div>
      <div
        class="content"
      >
        <div
          class="t-skeleton"
        >
          
          
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-rect"
              style="width: 100%; height: 30px;"
            >
              <!---->
            </div>
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-rect"
              style="width: 100%; height: 200px;"
            >
              <!---->
            </div>
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text"
              style="height: 30px;"
            >
              <!---->
            </div>
            <div
              class="t-skeleton__col t-skeleton--type-text"
              style="height: 30px;"
            >
              <!---->
            </div>
            <div
              class="t-skeleton__col t-skeleton--type-text"
              style="height: 30px;"
            >
              <!---->
            </div>
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text"
              style="height: 30px;"
            >
              <!---->
            </div>
            <div
              class="t-skeleton__col t-skeleton--type-text"
              style="height: 30px;"
            >
              <!---->
            </div>
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text"
              style="height: 30px;"
            >
              <!---->
            </div>
            <div
              class="t-skeleton__col t-skeleton--type-text"
              style="height: 30px;"
            >
              <!---->
            </div>
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text"
              style="height: 30px;"
            >
              <!---->
            </div>
            <div
              class="t-skeleton__col t-skeleton--type-text"
              style="height: 30px;"
            >
              <!---->
            </div>
            
          </div>
          
          
        </div>
      </div>
    </section>
    
  </div>
  
  
</div>
`;
